2003-10-19  Laurent Sansonetti <laurent@datarescue.be>
                                                                                                                             
	* doc/C/examples/full_example.c:
	Fixed compilation issues (was broken).

2003-10-18  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/*.c:
	* doc/C/tmpl/*.sgml:
	Added some missing entries in the API reference, and fixed existing
	ones.

2003-10-16  Paisa Seeluagnsawat <paisa@users.sf.net>

	* provider/mysql/gda-mysql-recordset.c: fixed possible memory
	leak in fetch_row() by moving gda_row_new() a few lines down.

2003-10-14  Murray Cumming  <murrayc@usa.net>

	* libgda/gda-config.[h|c]: Register GdaProviderInfo and 
	GdaDataSourceInfo boxed gtypes, with copy and free functions. Useful
	for language bindings.

2003-10-12  Rodrigo Moya <rodrigo@gnome-db.org>

	Released 1.0.1

2003-10-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/Makefile.am: fixed enum code generation.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	* doc/C/tmpl/gda-blob.sgml: added missing file.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #123342

	* libgda/gda-client.c (gda_client_close_all_connections): remove
	connections from the list before closing them.
	(gda_client_notify_event): only notify events if the connection is
	in our private list.

2003-10-11  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #121403

	* libgda/gda-connection.c (gda_connection_new): duplicate
	real_username and real_password strings before they are freed.

2003-10-07  Laurent Sansonetti <laurent@datarescue.be>

	* libgda/gda-quark-list.c:
	* libgda/gda-quark-list.h: introduced gda_quark_list_clear() +
	gda_quark_list_add_from_string() takes care of the 'cleanup'
	boolean parameter. 

2003-10-01  Murray Cumming  <murrayc@usa.net>
 
 	* libgda/Makefile.am: Use glib-mkenums to generate
 	the get_type() functions for the libgda enums. The build file
 	stuff is based on the same stuff in pango.
